clap_derive/tests/ui/multiple_external_subcommand.stderr
error: Only one variant can be marked with `external_subcommand`, this is the second
  --> $DIR/multiple_external_subcommand.rs:14:12
   |
14 |     #[clap(external_subcommand)]
   |            ^^^^^^^^^^^^^^^^^^^
